code updates prior to github reorg

--- a/code/2_decontamination.Rmd
+++ b/code/2_decontamination.Rmd
@@ -141,12 +141,17 @@ decontaminated_1 <- indexhop_table %>%
 ## Step 2. Remove ASVs that don't get a fish taxonomic assignment  
 
 ```{r}
-taxonomy <- read.csv("/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241108_collapsed.csv") %>%
+taxonomy <- read.csv("/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20250110_collapsed.csv") %>%
   select(!X) %>%
   rename(ASV = qseqid)
 
+##remove the ASVs that got a Micropterus tax assignment 
+micropterus <- taxonomy %>% 
+  filter(taxon == "Micropterus")
+
 asv_table_filter2 <- asv_table_filter1 %>%
-  filter(ASV %in% taxonomy$ASV)
+  filter(ASV %in% taxonomy$ASV) %>%
+  filter(!ASV %in% micropterus$ASV)
 ```
 
 
@@ -163,7 +168,7 @@ what ASVs have no reads in samples, but reads in the controls?
 ```{r}
 not_in_samples <- reads_per_type_ASV %>%
   pivot_wider(names_from = "sample_type", values_from = c("TotalReadsPerASV")) %>%
-    filter(sample < 1 & mock < 1)
+    filter(sample < 1 & mock < 1 & field_blank < 1)
 not_in_samples
 ```
 
@@ -226,237 +231,6 @@ asv_table_filter4 <- asv_table_filter3 %>%
   filter(!Sample_ID %in% reps_below$Sample_ID)
 ```
 
-
 ```{r}
 write.csv(asv_table_filter4, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/decontaminated_asv_table.csv")
 ```
-
-
-######### STOPPING HERE!
-
-## Step 5. check pcr replicate dissimilarity in field samples 
-
-are there any samples that have made it to this point that don't actually have any reads? 
-```{r}
-asv_table_filter4 %>%
-  group_by(Sample_ID) %>%
-  summarise(total_reads = sum(reads)) %>%
-  arrange(total_reads)
-```
-
-how many pcr replicates does each extraction replicate have? 
-```{r}
-onerep <- asv_table_filter4  %>%
-  separate(Sample_ID, into = c("bottle_ID", "replicate"), remove = F) %>%
-  group_by(bottle_ID) %>%
-  summarise(nrep = n_distinct(Sample_ID)) %>%
-  filter(nrep == 1)
-onerep
-
-asv_table_filter4  %>%
-  separate(Sample_ID, into = c("bottle_ID", "replicate"), remove = F) %>%
-  group_by(bottle_ID) %>%
-  summarise(nrep = n_distinct(Sample_ID)) %>%
-  filter(nrep == 2)
-
-asv_table_filter4  %>%
-  separate(Sample_ID, into = c("bottle_ID", "replicate"), remove = F) %>%
-  group_by(bottle_ID) %>%
-  summarise(nrep = n_distinct(Sample_ID)) %>%
-  filter(nrep == 3)
-```
-
-remove the bottles with only 1 pcr rep (there's one field blank and one extraction blank) and then calculate an eDNA index
-```{r}
-normalized <- asv_table_filter4 %>%
-  separate(Sample_ID, into = c("bottle_ID", "replicate"), remove = F) %>%
-  filter(!bottle_ID %in% onerep$bottle_ID) %>% 
-  filter(sample_type == "sample" | sample_type == "mock") %>%
-  group_by(Sample_ID) %>%
-  mutate(Tot = sum(reads),
-         Prop_reads = reads/Tot) %>%     ## calculate read proportions 
-  ungroup() %>%
-  dplyr::group_by(ASV) %>%
-  mutate(Colmax = max(Prop_reads, na.rm = TRUE),
-         Normalized_reads = Prop_reads/Colmax)   ## this normalized the proportion of reads for each ASV by dividing it by it's maximum value
-
-#add back in some metadata - will use this for dissimilarity measures
-normalized_w_meta <- normalized %>%
-  left_join(metadata) %>%
-  ### need to make objects to designate site and biological reps 
-```
-
-```{r}
-tibble_to_matrix <- function (tb) {
-  
-  tb %>%
-  #normalized %>%
-    group_by(new_ID, ASV) %>% 
-    summarise(nReads = sum(Normalized_reads)) %>% 
-    spread ( key = "ASV", value = "nReads", fill = 0) %>%
-    ungroup() -> matrix_1
-    samples <- pull (matrix_1, new_ID)
-    matrix_1[,-1] -> matrix_1
-    data.matrix(matrix_1) -> matrix_1
-    dimnames(matrix_1)[[1]] <- samples
-    vegdist(matrix_1) -> matrix_1
-}
-```
-
-```{r}
-all.distances.full <- tibble_to_matrix(normalized_w_meta)
-
-# Do all samples have a name?
-summary(is.na(names(all.distances.full)))
-```
-
-make the pairwise distances a long table
-```{r}
-as_tibble(subset(melt(as.matrix(all.distances.full)))) -> all.distances.melted
-
-# Any major screw ups
-summary(is.na(all.distances.melted$value))
-
-# Now, create a three variables for all distances, they could be PCR replicates, BIOL replicates, or from the same site
-
-all.distances.melted %>%
-  separate (Var1, into = "Bottle1", sep = "\\-", remove = FALSE) %>%
-  separate (Bottle1, into = "Site1", remove = FALSE) %>%
-  separate (Var2, into ="Bottle2", sep = "\\-", remove = FALSE) %>%
-  separate (Bottle2, into = "Site2", remove = FALSE) %>%
-  mutate (Distance.type = case_when( Bottle1 == Bottle2 ~ "PCR Replicates",
-                                      Site1 == Site2 ~ "Same Site",
-                                      TRUE ~ "Different Site"
-                                     )) %>%
-  dplyr::select(Sample1 = Var1, Sample2 = Var2 , value , Distance.type) %>%
-  filter (Sample1 != Sample2) -> all.distances.to.plot
-
-# Checking all went well
-
-sapply(all.distances.to.plot, function(x) summary(is.na(x)))
-```
-
-```{r}
-all.distances.to.plot$Distance.type <- all.distances.to.plot$Distance.type  %>% fct_relevel("PCR Replicates", "Same Site")
-
-ggplot (all.distances.to.plot) +
-  geom_histogram (aes (fill = Distance.type, x = value, after_stat(ndensity)), position = "dodge",  alpha = 0.9, bins = 50) +
-  facet_wrap( ~ Distance.type) +
-  labs (x = "Pairwise dissimilarity", y = "density" ,
-        Distance.type = "Distance",
-        title = "") +
-    guides (fill = "none")
-```
-
-this shows quite a bit a dissimilarity among PCR replicates...  
-
-next i will follow what was done here:  (https://github.com/ramongallego/eDNA.and.Ocean.Acidification.Gallego.et.al.2020/blob/master/Scripts/Denoising.all.runs.Rmd) and instead of choosing outliers based on the pairwise distances, we can do a similar thing using the distance to centroid. 
-
-
-now identify and discard outliers 
-```{r message=FALSE, warning=FALSE}
-normalized_w_meta %>%
-  group_by(extraction_ID) %>% nest() -> nested.cleaning 
-
-nested.cleaning %>% 
-  mutate(matrix = map(data, tibble_to_matrix)) -> nested.cleaning
-
-nested.cleaning %>% mutate(ncomparisons = map(matrix, length)) -> nested.cleaning
-```
-
-```{r}
-dist_to_centroid <- function (x,y) {
-  
-  #biol <- rep(y, dim(x)[[1]])
-  biol <- rep(y, length(x))
-  
-  if (length(biol) == 1) {
-    output = rep(x[1]/2,2)
-    names(output) <- attr(x, "Labels")
-  }else{ 
-    
-  dispersion <- betadisper(x, group = biol)
-  output = dispersion$distances
-  }
-  output
-    }
-```
-
-```{r}
-nested.cleaning.temp <- nested.cleaning %>% 
-  mutate(distances = map2(matrix, extraction_ID, dist_to_centroid))
-
-all_distances <- nested.cleaning.temp %>%
-  unnest_longer(distances) %>%
-  dplyr::select(extraction_ID, distances_id, distances)
-
-hist(all_distances$distances)
-```
-
-remove the pcr replicates outside of 95% of the normal distribution of distances 
-```{r}
-normparams <- MASS::fitdistr(all_distances$distances, "normal")$estimate                                      
-probs <- pnorm(all_distances$distances, normparams[1], normparams[2])
-outliers_centroid <- which(probs>0.95)
-
-discard_centroid <- all_distances$distances_id[outliers_centroid]
-discard_centroid
-
-#extraction_IDs with a pcr replicate discarded 
-to_discard <- data.frame(discard_centroid) %>%
-  separate(discard_centroid, into = c("location1", "extraction_ID", "pcr_replicate"))
-```
-
-
-which extraction/bottle ID have a pcr replicate that's recommended for removal? 
-```{r}
-removed_dissim <- normalized_w_meta %>%
-  filter(extraction_ID %in% to_discard$extraction_ID)
-```
-
-
-these samples have at least one dissimilar pcr replicates 
-```{r}
-unique(removed_dissim$extraction_ID)
-
-first_six <- unique(removed_dissim$extraction_ID)[1:6]
-
-removed_dissim %>%
-  filter(extraction_ID %in% first_six) %>%
-  filter(reads > 0) %>%
-  group_by(Sample_ID) %>%
-  mutate(sum=sum(reads)) %>%
-  mutate(prop = reads/sum) %>%
-  ggplot(aes(x=Sample_ID, y=prop, fill=ASV)) +
-  geom_bar(stat = "identity") + 
-  facet_wrap(~extraction_ID, scales = 'free', ncol = 3) +
-  theme_bw() + 
-  theme(
-    axis.text.x = element_text(angle = 90, hjust = 0.95),
-    legend.position = "none",
-    legend.title = element_blank()
-  )  
-```
-
-now filter the asv table accordingly 
-```{r}
-to_discard <- data.frame(discard_centroid) %>%
-  separate(discard_centroid, into = c("location1", "Sample_ID"), sep = "_")
-
-asv_table_filter5 <- asv_table_filter4 %>%
-  filter(!Sample_ID %in% to_discard$Sample_ID) %>%
-  filter(!Sample_ID %in% c("e00512-C", "e00562-A")) %>% ## these are the samples with only one PCR replicate
-  left_join(metadata) %>%
-  filter(!is.na(location1)) %>%
-  select(Sample_ID:reads)
-
-no_read_ASVs <- asv_table_filter5 %>%
-  group_by(ASV) %>%
-  summarize(tot_reads = sum(reads)) %>%
-  filter(tot_reads == 0)
-
-asv_table_filter6 <- asv_table_filter5 %>%
-  filter(!ASV %in% no_read_ASVs$ASV)
-```
-
-
