--- a/code/1.1_taxonomic_assignment_blastn.Rmd
+++ b/code/1.1_taxonomic_assignment_blastn.Rmd
@@ -32,7 +32,7 @@ tax_df <- taxonomy %>%
   group_by(V1, V17) %>% # group by the sequence key and the full taxonomy to reduce duplicate entries
   unique() %>% # doing that reduced the number of entries
   rename(qseqid=V1, perc_id=V3, length=V4, taxonomy=V17) %>% #rename headers
-  filter(perc_id > 98) %>% # blast output includes as low as 96 perc_id, but for now i only care about the top 2%
+  #filter(perc_id > 98) %>% # blast output includes as low as 96 perc_id, but for now i only care about the top 2%
   filter(!is.na(taxonomy))
 ```
 
@@ -126,20 +126,25 @@ When a valid name was not found, the presence of a species in the study area was
 ```{r}
 spp_range <- spp_range %>%
   mutate(in_range = ifelse(Species == "Sebastes cheni", "no", in_range)) %>%
-  mutate(in_range = ifelse(Species == "Ammodytes japonicus", "no", in_range)) 
+  mutate(in_range = ifelse(Species == "Ammodytes japonicus", "no", in_range)) %>%
+  mutate(in_range = ifelse(Species == "Sebastiscus vibrantus", "no", in_range))
 
 in_range <- spp_range %>%
   filter(in_range == "yes") 
 ```
 
-## i can tell there are some species that do not belong in the dataset, so removing those manually 
+## manually remove some species that do not belong in the dataset
 ```{r}
 in_range <- in_range %>%
   filter(Species != "Oncorhynchus gilae") %>%
   filter(Species != "Acipenser brevirostrum") %>%  #positive control mis-id
   filter(Species != "Clupea harengus") %>%
-  filter(Species != "Microgadus tomcod")
-## likely more could be filtered out here
+  filter(Species != "Microgadus tomcod") %>%
+  filter(Species != "Microcottus sellaris") %>%    ##in Bering Sea but not SE AK 
+  filter(Species != "Oncorhynchus chrysogaster") %>%
+  filter(Species != "Salvelinus leucomaenis") %>%
+	filter(Species != "Salvelinus namaycush") %>%
+  filter(!str_detect(Species, "Micropterus"))
 ```
 
 ## keep only the "in range" fish species in the taxon dataframe 
@@ -157,6 +162,14 @@ single_spp_seqs <- taxon_df_reduced %>%
   filter(n_taxa == 1)
 ```
 
+i quickly checked this species list and did not find any obvious species to remove 
+
+## single species with at least 98% similarity 
+```{r}
+single_spp_seqs_98 <- single_spp_seqs %>%
+  filter(perc_id >=98)
+```
+
 ## remove the single-species seqs from the dataframe and then rank the hits by % identity for the remaining seqs
 ```{r}
 seq_id_diff <- taxon_df_reduced %>%
@@ -172,7 +185,8 @@ seq_id_diff <- taxon_df_reduced %>%
       #mutate(id_rank = rank(desc(seq_percID), ties.method = "min")) %>% # rank the taxonomic hits per sequence by % id
        mutate(top_perc = max(seq_percID)) %>% # designate the highest % id for the best taxonomic hit in each sequence (in some, but not all cases, this is 100%)   %>%
       mutate(diff = top_perc - seq_percID) %>% # calculate the difference between the % identity of the top hit and each subsequent taxonomic hit
-        arrange(diff)
+        arrange(diff) %>%
+  filter(top_perc >= 98)
 ```
 
 Now you have the single best entry for each species for each sequence ranked and with the difference between the first and second ranked entries calculated.
@@ -182,7 +196,7 @@ For sequences with multiple top hits, where the difference between ranked taxa =
 ** if there is a sequence that is >99% match, then keep just the sequences within 0.5%  
 ** if there is NOT a >99% match, keep the top 1% 
 
-## ASVs with >99% match 
+## ASVs with >99% match or <99% match
 ```{r}
 match_99 <- seq_id_diff %>%
   filter(top_perc >= 99) %>%
@@ -229,7 +243,7 @@ singletons <- keepers %>%
 singleton_df <- singletons %>%
   left_join(keepers) %>%
   select(-n) %>%
-  bind_rows(single_spp_seqs) %>% # combine the single spp data
+  bind_rows(single_spp_seqs_98) %>% # combine the single spp data
   mutate(taxonomic_level = "species") %>%
   mutate(taxon = species)
 
@@ -346,62 +360,137 @@ single_spp <- singleton_df %>%
 tax_df_2 <- bind_rows(single_kingdom, single_phylum, single_class, single_order, single_family, single_genus, single_spp)
 ```
 
+## also ran blastn against the salmon specific reference database 
+blastn -query /home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/filtered.seqs.fasta -db /genetics/edna/custom_dbs/salmon_mifish_db_20241227 -out home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/blastn_salmon.txt -perc_identity 96 -qcov_hsp_perc 98 -num_threads 10 -outfmt '6 qseqid sseqid pident length mismatch gapopen qstart qend sstart send evalue bitscore sscinames staxids'
 
-## for now i will skip the gadid and salmon custom dbs since i plan to make update on those
-
-## Create output taxonomy data frames
 ```{r}
-# and then collapse that down to just a single taxon per ASV
+salmon_tax <- read.delim("/home/kimberly.ledger/nearshore_eDNA/data/samples_w_mocks_updated/blastn_salmon.txt", header = FALSE, na.strings=c(""," ","NA"))
+
+salmon_tax <- salmon_tax %>%
+  filter(V4 > 100) %>% # make sure all retained matches are >100 bp
+  select(-V5, -V6, -V7, -V8, -V9, -V10, -V11, -V12, -V13, -V14) %>%  #remove unnecessary columns
+  group_by(V1, V2) %>% # group by the sequence key and the full taxonomy to reduce duplicate entries
+  unique() %>% # doing that reduced the number of entries
+  rename(qseqid=V1, species=V2, perc_id=V3, length=V4) #rename headers
+```
+
+## rank the hits by % identity
+```{r}
+seq_id_diff_salmon <- salmon_tax %>%
+  select(-length) %>%
+  group_by(qseqid, species) %>%
+    mutate(seq_percID = max(perc_id)) %>%
+    group_by(qseqid, species, seq_percID) %>%
+  summarise(max(seq_percID)) %>% # take just the top hit for each taxon (for each sequence)
+  select(-`max(seq_percID)`) %>%
+  ungroup() %>%
+  group_by(qseqid) %>%
+      #mutate(id_rank = rank(desc(seq_percID), ties.method = "min")) %>% # rank the taxonomic hits per sequence by % id
+       mutate(top_perc = max(seq_percID)) %>% # designate the highest % id for the best taxonomic hit in each sequence (in some, but not all cases, this is 100%)   %>%
+      mutate(diff = top_perc - seq_percID) %>% # calculate the difference between the % identity of the top hit and each subsequent taxonomic hit
+      arrange(diff)
+
+seq_id_diff_salmon
+```
+
+** if there is a sequence that is >99% match, then keep just the sequences within 0.5%  
+** if there is NOT a >99% match, keep the top 1% 
+
+## Figure out which differences are outside the threshold and eliminate those first
+```{r}
+# filter out any taxa that are >1% less matching identity than the top taxonomic hit for a given sequence
+to_remove_low_perc_hits_salmon <- seq_id_diff_salmon %>%
+  ungroup() %>%
+  group_by(qseqid) %>%
+  filter(diff > 0.5)
+
+keepers_salmon <- seq_id_diff_salmon %>%
+  anti_join(to_remove_low_perc_hits_salmon) %>%
+  filter(top_perc > 98)
+```
+
+## so now determine whether ASVs should be assigned to genus, family, order, etc. 
+```{r}
+singletons_salmon <- keepers_salmon %>%
+  select(qseqid) %>%
+  tally() %>%
+  filter(n == 1)
+
+# these are the seqs that now have only a single match
+singleton_df_salmon <- singletons_salmon %>%
+  left_join(keepers_salmon) %>%
+  select(-n) %>%
+  mutate(taxonomic_level = "species") %>%
+  mutate(taxon = species)
+
+## Genus-level matches
+# remove the singletons from the bigger df 
+single_genus_salmon <- keepers_salmon %>%
+  anti_join(singleton_df_salmon)%>% # at best, these should be genus-level matches
+  left_join(., keepers_salmon) %>%
+  arrange(qseqid) %>%
+  mutate(taxonomic_level = "genus") %>%
+  mutate(taxon = "Oncorhynchus")
+```
+
+remove underscore from taxon name 
+```{r}
+salmon_df <- singleton_df_salmon %>%
+  bind_rows(single_genus_salmon)
+
+salmon_df$taxon <- gsub("_", " ", salmon_df$taxon)
+salmon_df$species <- gsub("_", " ", salmon_df$species)
+salmon_df$genus <- "Oncorhynchus"
+salmon_df$family <- "Salmonidae"
+salmon_df$order <- "Salmoniformes"
+salmon_df$class <- "Actinopteri"
+salmon_df$phylum <- "Chordata"
+salmon_df$kingdom <- "Eukaryota"
+```
+
+## compare original salmon assignments to custom db assignments 
+```{r}
+salmon_comparison <- tax_df_2 %>%
+  filter(genus == "Oncorhynchus") %>%
+  select(qseqid, species, seq_percID, taxon) %>%
+  left_join(salmon_df, by = "qseqid")
+```
+only a few differences between full ncbi db and custom salmon db. but will go ahead with the custom db verison. 
+
+```{r}
 tax_df_3 <- tax_df_2 %>%
-  mutate(species = ifelse(taxonomic_level == "family", NA, species),
-         genus = ifelse(taxonomic_level == "family", NA, genus),
-         species = ifelse(taxonomic_level == "genus", NA, species)) %>%
-  select(qseqid, taxon, taxonomic_level, species, genus, family, order, class, phylum, kingdom) %>%
-  unique()
+  filter(genus != "Oncorhynchus") %>%
+  bind_rows(salmon_df)
 ```
-
-```{r}
-#write.csv(tax_df_2, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241108_uncollapsed.csv")
-#write.csv(tax_df_3, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241108_collapsed.csv")
-```
-
 
 ## custom updates to make: 
 ASV_0053 - filter by diff = 0 to assign to Ophiodon elongatus
 assign Pleuronectidae into groups 
 Pleuronectidae 1: Hippoglossoides elassodon, Hippoglossoides robustus, Limanda aspera
 Pleuronectidae 2: Isopsetta isolepis, Parophrys vetulus, Psettichthys melanostictus
-Pleuronectidae 3: Liopsetta glacialis, Platichthys stellatus, Hippoglossus stenolepis
+Pleuronectidae 3: Liopsetta glacialis, Platichthys stellatus
 Sebastes 1: Sebastes caurinus/Sebastes maliger
 Sebastes 2: Sebastes auriculatus/Sebastes rastrelliger
 Sebastes 3: lots of Sebastes sp including Sebastes flavidus
 -put all Gadus reads to genus level. 
-1 - put all Ammodytes reads to Ammodytes personatus (it's the only species present in region)
-2 - lump the few Anoplarchus purpurescens reads to genus level 
-3 - lump the few Cottus cognatus reads to genus level
-4 - lump the few Myoxocephalus stelleri to genus level
-5 - put Pholis reads to Pholis laeta
-
-
-
-```{r}
-tax_df_2 <- read.csv("/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241108_uncollapsed.csv") %>%
-  select(!X)
-```
+- put all Ammodytes reads to Ammodytes personatus (it's the only species present in region)
+- lump the few Anoplarchus purpurescens reads to genus level 
+- lump the few Cottus cognatus reads to genus level
+- lump the few Myoxocephalus stelleri to genus level
+- put Pholis reads to Pholis laeta
+- move Sebastes nigrocinctus and Sebastes entomelas reads to Sebastes 3 ***
 
 
 ```{r}
-tax_df_updated <- tax_df_2 %>%
-  mutate(taxon = ifelse(qseqid %in% c("ASV_0053"), "Ophiodon elongatus", taxon),
-         taxonomic_level = ifelse(qseqid %in% c("ASV_0053"), "species", taxonomic_level),
+tax_df_updated <- tax_df_3 %>%
+  mutate(taxon = ifelse(qseqid %in% c("ASV_0053"), "Ophiodon elongatus", taxon), taxonomic_level = ifelse(qseqid %in% c("ASV_0053"), "species", taxonomic_level),
        taxon = ifelse(qseqid %in% c("ASV_0029"), "Pleuronectidae 1", taxon),
        taxon = ifelse(qseqid %in% c("ASV_0038", "ASV_0420", "ASV_0431", "ASV_0470", "ASV_0496", "ASV_0554", "ASV_0622", "ASV_0623"), "Pleuronectidae 2", taxon),
        taxon = ifelse(qseqid %in% c("ASV_0071", "ASV_0175", "ASV_0365"), "Pleuronectidae 3", taxon),
        taxon = ifelse(qseqid %in% c("ASV_0019", "ASV_0176", "ASV_0180", "ASV_0356", "ASV_0598"), "Sebastes 1", taxon),
        taxon = ifelse(qseqid %in% c("ASV_0023", "ASV_0168", "ASV_0332"), "Sebastes 2", taxon),
-       taxon = ifelse(qseqid %in% c("ASV_0027","ASV_0125","ASV_0128"), "Sebastes 3", taxon),
-       taxon = ifelse(genus == "Gadus", "Gadus", taxon),
-       taxonomic_level = ifelse(genus == "Gadus", "genus", taxonomic_level),
+       taxon = ifelse(qseqid %in% c("ASV_0027","ASV_0125","ASV_0128", "ASV_0330", "ASV_0190"), "Sebastes 3", taxon), taxonomic_level = ifelse(genus == "Sebates 3", "genus", taxonomic_level),
+       taxon = ifelse(genus == "Gadus", "Gadus", taxon), taxonomic_level = ifelse(genus == "Gadus", "genus", taxonomic_level),
        taxon = ifelse(qseqid %in% c("ASV_0020", "ASV_0044"), "Oncorhynchus keta", taxon),
        taxon = ifelse(qseqid %in% c("ASV_0083"), "Oncorhynchus kisutch", taxon),
        taxonomic_level = ifelse(qseqid %in% c("ASV_0020", "ASV_0044","ASV_0083"), "species", taxonomic_level),
@@ -414,8 +503,14 @@ tax_df_updated <- tax_df_2 %>%
        taxon = ifelse(qseqid %in% c("ASV_0272"), "Myoxocephalus", taxon),
        taxonomic_level = ifelse(qseqid %in% c("ASV_0272"), "genus", taxonomic_level),
        taxon = ifelse(qseqid %in% c("ASV_0236"), "Pholis laeta", taxon),
-       taxonomic_level = ifelse(qseqid %in% c("ASV_0236"), "species", taxonomic_level))
+       taxonomic_level = ifelse(qseqid %in% c("ASV_0236"), "species", taxonomic_level), 
+       taxonomic_level = ifelse(qseqid %in% c("ASV_0227", "ASV_0571", "ASV_0636", "ASV_0814"), "genus", taxonomic_level),
+       taxon = ifelse(qseqid %in% c("ASV_0227", "ASV_0571", "ASV_0636", "ASV_0814"), "Cottus_Leptocottus", taxon)) %>%
+    filter(qseqid != "ASV_0610") %>% # this asv only has couple reads in mock community samples (will get removed anyways...)
+    filter(qseqid != "ASV_0864") %>%  #this asv only has 1 reads in mock community samples (will get removed anyways...)
+    filter(qseqid != "ASV_0865")  #this asv only has 1 reads in mock community samples (will get removed anyways...)
 ```
+
 
 ```{r}
 # and then collapse that down to just a single taxon per ASV
@@ -428,10 +523,60 @@ tax_df_updated_collapsed <- tax_df_updated %>%
 ```
 
 ```{r}
-write.csv(tax_df_updated, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241122_uncollapsed.csv")
-write.csv(tax_df_updated_collapsed, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20241122_collapsed.csv")
+write.csv(tax_df_updated, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20250110_uncollapsed.csv")
+write.csv(tax_df_updated_collapsed, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_20250110_collapsed.csv")
 ```
 
 
-notes: perhaps room for improvement on Oncorhynchus ASVs from field samples (not in the asvs in mock communities)
+## output table of taxonomic groupings - need to make some manual edits to reflect customized changes above 
 
+```{r}
+groups_to_remove_1 <- tax_df_updated %>%
+  filter(species == "Hexagrammos lagocephalus" | species == "Hexagrammos octogrammus" | species == "Hexagrammos stelleri") %>%
+  filter(taxon == "Ophiodon elongatus")
+
+groups_to_remove_2 <- tax_df_updated %>%
+  filter(taxon == "Pleuronectidae 3") %>%
+  filter(species == "Hippoglossus stenolepis")
+  
+groups_to_remove_3 <- tax_df_updated %>%
+  filter(taxon == "Oncorhynchus kisutch" & species == "Oncorhynchus keta")
+
+groups_to_remove_4 <- tax_df_updated %>%
+  filter(taxon == "Oncorhynchus keta" & species == "Oncorhynchus kisutch")
+
+groups_to_remove_5 <- tax_df_updated %>%
+  filter(taxon == "Oncorhynchus keta" & species == "Oncorhynchus nerka")
+
+groups_to_remove_6 <- tax_df_updated %>%
+  filter(taxon == "Pholis laeta" & species == "Pholis fasciata")
+
+groups_to_remove_7 <- tax_df_updated %>%
+  filter(taxon == "Pholis laeta" & species == "Pholis clemensi")
+
+groups_to_remove_8 <- tax_df_updated %>%
+  filter(species == "Sebastes auriculatus" | species == "Sebastes rastrelliger") %>%
+  filter(qseqid == "ASV_0598")
+
+tax_df_groups <- tax_df_updated %>%
+  #filter(taxonomic_level != "species") %>% 
+  filter(species != "Ammodytes hexapterus") %>%
+  anti_join(groups_to_remove_1) %>%
+  anti_join(groups_to_remove_2) %>%
+  anti_join(groups_to_remove_3) %>%
+  anti_join(groups_to_remove_4) %>%
+  anti_join(groups_to_remove_5) %>%
+  anti_join(groups_to_remove_6) %>%
+  anti_join(groups_to_remove_7) %>%
+  anti_join(groups_to_remove_8) %>%
+  select(taxon, taxonomic_level, species, genus, family, order) %>%
+  unique() %>%
+  arrange(taxon)
+```
+
+export 
+```{r}
+write.csv(tax_df_groups, "/home/kimberly.ledger/nearshore_eDNA/outputs/samples_w_mocks_updated/taxonomy_groups_20250110.csv")
+```
+
+Oncorhynchus = mykiss, nerka, keta, gorbuscha, kisutch
